--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.3",
     "@types/react": "~18.2.79",
     "expo": "~51.0.9",
+    "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "styled-components": "^6.1.11",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
@@ -30,6 +33,9 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "typescript-eslint": "^7.11.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "private": true
 }
